[package]
name = "redux-rs"
version = "0.3.3"
description = "A Rust implementation of Redux."
authors = ["Jeroen Vervaeke <jeroen@vervaeke.nu>", "Jan Baudisch <dev@baudisch.xyz>"]
license = "MIT"
homepage = "https://github.com/redux-rs/redux-rs"
repository = "https://github.com/redux-rs/redux-rs.git"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-trait = "0.1.52"
env_logger = { version = "0.9.0", optional = true }
log = { version = "0.4", optional = true }
tokio = { version = "1", features = [ "sync", "rt" ] }
tui = { version = "0.17", optional = true }
crossterm = { version = "0.23", optional = true }

[dev-dependencies]
tokio = { version = "1", features = [ "sync", "rt", "rt-multi-thread", "time", "macros" ] }

[features]
default = []
middleware_logger = [ "log" ]
middleware_thunk = []
example_logger_middleware_dependencies = [ "middleware_logger", "env_logger" ]
example_thunk_middleware_dependencies = [ "middleware_thunk" ]
example_tui_todo_dependencies = [ "tui", "crossterm" ]

[[example]]
name = "basic_todo"

[[example]]
name = "logger_middleware"
required-features = [ "example_logger_middleware_dependencies" ]

[[example]]
name = "thunk_middleware_fn"
required-features = [ "example_thunk_middlewaregt_dependencies" ]

[[example]]
name = "thunk_middleware_trait"
required-features = [ "example_thunk_middleware_dependencies" ]

[[example]]
name = "tui_todo"
required-features = [ "example_tui_todo_dependencies"]